# nba-forecasting

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-dashboard.txt  requirements.txt
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
notebooks/: exploration.ipynb
sql/: 001_schema.sql  002_indexes.sql  003_views.sql
src/nba_predictor/: __init__.py  config.py  db.py
src/nba_predictor/analytics/: __init__.py  chatbot.py  upcoming_context.py
src/nba_predictor/api/: main.py
src/nba_predictor/dashboard/: app.py
src/nba_predictor/features/: build_game_features.py  build_team_daily_features.py  build_team_elo_history.py  build_team_season_identities.py  elo.py  matchup_context.py
src/nba_predictor/forecast/: __init__.py  forecast_team_metrics.py  timesfm_loader.py
src/nba_predictor/ingest/: __init__.py  ingest_box_scores.py  ingest_games.py  ingest_history.py  ingest_play_by_play.py  ingest_player_history.py  ingest_players.py  ingest_rosters.py  ingest_schedule.py  ingest_team_logs.py  nba_client.py
src/nba_predictor/jobs/: operator_actions.py  (+1 more)
tests/: test_api.py  test_chatbot.py  test_elo.py  test_elo_history.py  test_evaluation.py  test_features.py  test_history.py  test_play_by_play.py  test_player_history.py  test_players.py  test_prediction.py  test_refresh_pipeline.py  test_schedule.py  test_team_season_identities.py  test_upcoming_context.py
(+4 files in other folders)
