[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-oss-game-predictor"
version = "0.1.0"
description = "Self-hosted OSS NBA game prediction system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
